// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditModal with null todoState should render correct 1`] = `
<Modal
  confirmLoading={false}
  defaultDescriptin=""
  destroyOnClose={true}
  maskTransitionName="fade"
  okType="primary"
  onCancel={[Function]}
  onOk={[Function]}
  prefixCls="ant-modal"
  title="Title"
  transitionName="zoom"
  visible={true}
  width={520}
>
  <p>
    Due Date
  </p>
  <PickerWrapper
    allowClear={false}
    defaultValue={"1970-01-01T00:00:00.000Z"}
    format="YYYY-MM-DD"
    inputPrefixCls="ant-input"
    locale={Object {}}
    onChange={[Function]}
    onOk={[Function]}
    onOpenChange={[Function]}
    popupStyle={Object {}}
    prefixCls="ant-calendar"
    transitionName="slide-up"
  />
   
  <TimePicker
    align={
      Object {
        "offset": Array [
          0,
          -2,
        ],
      }
    }
    allowEmpty={false}
    defaultValue={"1970-01-01T00:00:00.000Z"}
    disabled={false}
    focusOnOpen={true}
    format="HH:mm"
    hideDisabledOptions={false}
    onChange={[Function]}
    placement="bottomLeft"
    prefixCls="ant-time-picker"
    transitionName="slide-up"
  />
  <p>
    Description
  </p>
  <TextArea
    defaultValue=""
    onChange={[Function]}
    prefixCls="ant-input"
    rows={4}
  />
</Modal>
`;

exports[`EditModal with todoState should render correct 1`] = `
<Modal
  confirmLoading={false}
  defaultDescriptin=""
  destroyOnClose={true}
  maskTransitionName="fade"
  okType="primary"
  onCancel={[Function]}
  onOk={[Function]}
  prefixCls="ant-modal"
  title="Title"
  todoState={
    Object {
      "complete": false,
      "createTime": 0,
      "description": "Yo ~!",
      "dueDatetime": 1547117100000,
      "id": "1",
    }
  }
  transitionName="zoom"
  visible={true}
  width={520}
>
  <p>
    Due Date
  </p>
  <PickerWrapper
    allowClear={false}
    defaultValue={"2019-01-10T10:45:00.000Z"}
    format="YYYY-MM-DD"
    inputPrefixCls="ant-input"
    locale={Object {}}
    onChange={[Function]}
    onOk={[Function]}
    onOpenChange={[Function]}
    popupStyle={Object {}}
    prefixCls="ant-calendar"
    transitionName="slide-up"
  />
   
  <TimePicker
    align={
      Object {
        "offset": Array [
          0,
          -2,
        ],
      }
    }
    allowEmpty={false}
    defaultValue={"2019-01-10T10:45:00.000Z"}
    disabled={false}
    focusOnOpen={true}
    format="HH:mm"
    hideDisabledOptions={false}
    onChange={[Function]}
    placement="bottomLeft"
    prefixCls="ant-time-picker"
    transitionName="slide-up"
  />
  <p>
    Description
  </p>
  <TextArea
    defaultValue="Yo ~!"
    onChange={[Function]}
    prefixCls="ant-input"
    rows={4}
  />
</Modal>
`;
